# FunctionTCPServer

./: CMakeLists.txt  README.md
include/: FunctionMessages.h  FunctionServer.h
include/server/: TCPConnection.h  TCPServer.h
src/: FunctionServer.cpp  TCPConnection.cpp
src/server/: TCPConnection.cpp  TCPServer.cpp
test/: main.cpp
